--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
    font-family: 'Dancing Script', cursive;
    font-family: 'Sacramento', cursive;
    font-family: 'Kanit', sans-serif;
+   padding-bottom: 0%;
  }
 
  h1 {
@@ -18,19 +19,33 @@
  h2 {
    margin-bottom: 0;
    margin-top: 0;
-   font-size: 2.5rem;
+   font-size: 2.7rem;
    font-family: 'Kanit', sans-serif;
    color: #66BFBF;
    font-weight: normal;
+   padding-top: 50px;
+   padding-bottom: 50px;
  
+ }
+ h3{
+  font-size: 2rem;
+  color: #11999E;
  }
 
   a {
    color: #11999E;
  }
 
+p{
+  font-weight: bold;
+ margin-top: 2rem;
+ margin-bottom: 2rem;
+ font-size: 1.25rem;
+ padding-bottom: 30px;
+}
  .footer-link {
    color: #11999E;
+   padding: 10px;
  }
 
  .top {
@@ -39,27 +54,40 @@
    background-color: #e6fff9;
  }
 
- .middle {}
+ .middle {
+  padding-top: 100px; 
+  padding-bottom: 100px;
+ }
 
- .bottom {}
+ .bottom {
+  padding-top: 100px;
+  background-color: #87eef2;
+  
+  border-bottom: 0; 
+  position:relative
+ }
 
  .skill-row {
    width: 50%;
-   margin: 100px auto 100px auto ;
+   margin: 50px auto 150px auto ;
    text-align: left;
    line-height: 2;
+   padding-top: 0%;
 
  }
 
  .img1 {
+  width: 12.5rem;
    position: absolute;
-   top: 30px;
-   right: 300px;
+   top: 1.875rem;
+   right: 18.75rem;
  }
 
  .img2 {
+ 
+  width: 12.5rem;
    position: absolute;
-   left: 300px;
+   left: 18.75rem;
  }
 
  .img4 {
@@ -80,4 +108,40 @@
   float: right;
   margin-right: 30px;
  }
+ hr{
+  border: none;
+  border-top-style: dotted;
+  border-width: 5px;
+  border-color: #9CB4CC;
+  width: 5%;
+ }
+.btn{
+  background: #11cdd4;
+  background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -ms-linear-gradient(top, #11cdd4, #11999e);
+  background-image: -o-linear-gradient(top, #11cdd4, #11999e);
+  background-image: linear-gradient(to bottom, #11cdd4, #11999e);
+  -webkit-border-radius: 8;
+  -moz-border-radius: 8;
+  border-radius: 8px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 18px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+.btn:hover {
+  background: #30e3cb;
+  background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -moz-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -ms-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: -o-linear-gradient(top, #30e3cb, #2bc4ad);
+  background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
+  text-decoration: none;
+}
+.end-foot{
+  color: #EAF6F6;
+}
+
 
