--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@
  }
 
  h2 {
-   margin-bottom: 0;
-   margin-top: 0;
+   
+   margin-top: 50px;
    font-size: 2.7rem;
    font-family: 'Kanit', sans-serif;
    color: #66BFBF;
@@ -28,26 +28,29 @@
  
  }
  h3{
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: #11999E;
  }
 
   a {
    color: #11999E;
+   font-family: 'Kanit', sans-serif;
+   padding: 10px 20px;
+   text-decoration: none;
+ }
+ a:hover{
+  color: #EAF6F6;
  }
 
 p{
   font-weight: bold;
  margin-top: 2rem;
  margin-bottom: 2rem;
- font-size: 1.25rem;
+ font-size: 1.15rem;
  padding-bottom: 30px;
  line-height: 2;
 }
- .footer-link {
-   color: #11999E;
-   padding: 10px;
- }
+ 
 
  .top {
    padding-top: 100px;
@@ -60,7 +63,7 @@ p{
  }
 
  .bottom {
-  padding-top: 100px;
+  padding: 50PX 0 20PX;
   background-color: #87eef2;
   
   border-bottom: 0; 
@@ -69,7 +72,7 @@ p{
 
  .skill-row {
    width: 50%;
-   margin: 50px auto 150px auto ;
+   margin: 100px auto 100px auto ;
    text-align: left;
    line-height: 2;
    padding-top: 0%;
@@ -114,17 +117,17 @@ p{
   margin-right: 30px;
  }
  .if-you{
-  width: 30%;
-  margin: auto;
+  width: 40%;
+  margin: 40px auto 60px;
  }
  hr{
-  border: none;
-  border-top-style: dotted;
-  border-width: 5px;
+  border:dotted 6px;
+  border-bottom: none; 
   border-color: #9CB4CC;
   width: 5%;
+  margin: 100px auto;
  }
-.btn{
+ .btn {
   background: #11cdd4;
   background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
   background-image: -moz-linear-gradient(top, #11cdd4, #11999e);
@@ -134,12 +137,13 @@ p{
   -webkit-border-radius: 8;
   -moz-border-radius: 8;
   border-radius: 8px;
-  font-family: Arial;
+  font-family: 'Kanit', sans-serif;
   color: #ffffff;
-  font-size: 18px;
+  font-size: 20px;
   padding: 10px 20px 10px 20px;
   text-decoration: none;
 }
+
 .btn:hover {
   background: #30e3cb;
   background-image: -webkit-linear-gradient(top, #30e3cb, #2bc4ad);
@@ -149,6 +153,10 @@ p{
   background-image: linear-gradient(to bottom, #30e3cb, #2bc4ad);
   text-decoration: none;
 }
-.end-foot{
+.coppyright{
   color: #EAF6F6;
+  font-size: 0.75rem;
+  padding: 20px 0;
 }
+
+
